# spade

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
cmake/: FindDbgHelp.cmake
docs/: bytecode.md  bytecode.txt  elp.md
pretty/src/: common.hpp  main.cpp  retriever.cpp  retriever.hpp
spadec/res/: basic.sp  foo.sp  io.sp  lib.sp  math.sp  test.sp
spadec/res/mod/: bar.sp
spadec/src/: Spade.g4  grammar.txt  main.cpp
spadec/src/analyzer/: analyzer.cpp  analyzer.hpp  decl_analyzer.cpp  expr_analyzer.cpp  info.cpp  info.hpp  scope.cpp  scope.hpp  scope_tree.cpp  scope_tree.hpp  stmt_analyzer.cpp  symbol_path.cpp  symbol_path.hpp
spadec/src/emitter/: emitter.cpp  emitter.hpp
spadec/src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
spadec/src/parser/: ast.cpp  ast.hpp  import.cpp  import.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp
spadec/src/utils/: color.cpp  color.hpp  common.hpp  error.hpp  error_printer.cpp  error_printer.hpp  graph.hpp  log.cpp  log.hpp  options.hpp  utils.cpp  utils.hpp
spasm/res/: hello.elp  hello.spa
spasm/src/: grammar.txt  main.cpp
spasm/src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
spasm/src/parser/: context.cpp  context.hpp  parser.cpp  parser.hpp
spasm/src/utils/: common.hpp  error.hpp  error_printer.cpp  error_printer.hpp
sputils/src/: sputils.hpp
sputils/src/elpops/: elpdef.cpp  elpdef.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
sputils/src/spimp/: color.cpp  color.hpp  common.hpp  error.hpp  exceptions.hpp  log.hpp  utils.cpp  utils.hpp
sputils/src/spinfo/: opcode.cpp  opcode.hpp  sign.cpp  sign.hpp
swan/res/: hello.elp
swan/src/: main.cpp
swan/src/callable/: callable.cpp  callable.hpp  foreign.cpp  foreign.hpp  frame.cpp  frame.hpp  method.cpp  method.hpp  table.cpp  table.hpp
swan/src/ee/: debugger.hpp  obj.cpp  obj.hpp  run.cpp  thread.cpp  thread.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
swan/src/jit/: jit.cpp  jit.hpp
swan/src/loader/: external.cpp  external.hpp  foreign_loader.hpp  loader.cpp  loader.hpp  verifier.cpp  verifier.hpp
swan/src/memory/: manager.cpp  manager.hpp  memory.hpp
swan/src/memory/basic/: basic_manager.cpp  basic_manager.hpp
swan/src/utils/: common.hpp  errors.hpp
velocity/: debug.cpp  jit.cpp  jit.hpp
velocity/res/: hello.elp
velocity/src/: main.cpp
velocity/src/callable/: callable.cpp  callable.hpp  foreign.cpp  foreign.hpp  foreign_call.cpp  frame.cpp  frame.hpp  frame_template.cpp  frame_template.hpp  inbuilt.hpp  method.cpp  method.hpp  table.cpp  table.hpp
velocity/src/debug/: debug.cpp  debug.hpp  table.cpp  table.hpp
velocity/src/ee/: run.cpp  settings.hpp  state.cpp  state.hpp  thread.cpp  thread.hpp  vm.cpp  vm.hpp
velocity/src/jit/: jit.cpp  jit.hpp
velocity/src/loader/: booter.cpp  booter.hpp  foreign_loader.cpp  foreign_loader.hpp  loader.cpp  loader.hpp  verifier.cpp  verifier.hpp
velocity/src/memory/: manager.cpp  manager.hpp  memory.hpp
velocity/src/memory/basic/: basic_collector.cpp  basic_collector.hpp  basic_manager.cpp  basic_manager.hpp
velocity/src/objects/: float.cpp  float.hpp  inbuilt_types.cpp  inbuilt_types.hpp  int.cpp  int.hpp  module.cpp  module.hpp  obj.cpp  obj.hpp  pointer.cpp  pointer.hpp  type.cpp  type.hpp  typeparam.cpp  typeparam.hpp
velocity/src/utils/: common.hpp  constants.hpp  exceptions.hpp  log.cpp  utils.hpp
